--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <link rel="shortcut icon" href="/medias/favicon.svg" type="image/svg">
 </head>
 <body>
-    <div id="nav">        
+    <div id="nav" class="loading">        
         <svg class="logo" viewBox="0 0 398 141">
             <path d="M80.1172 101H60.7031L33.0176 34.623L21.4648 101H1.43555L18.7305 1.46875H38.0762L65.8301 67.9824L77.3828 1.46875H97.3438L80.1172 101ZM119.424 101H99.3945L116.621 1.46875H136.65L119.424 101ZM223.535 18.0801H194.004L179.648 101H159.619L173.975 18.0801H144.785L147.725 1.46875H226.475L223.535 18.0801ZM263.799 64.5645H247.529L241.172 101H221.143L238.438 1.46875L271.387 1.53711C282.415 1.53711 290.892 4.13477 296.816 9.33008C302.786 14.5254 305.43 21.7487 304.746 31C303.789 44.6719 296.497 54.1738 282.871 59.5059L296.885 99.9062V101H275.557L263.799 64.5645ZM250.4 47.9531L265.303 48.0898C270.589 47.9987 274.941 46.5859 278.359 43.8516C281.823 41.0716 283.896 37.3118 284.58 32.5723C285.218 28.1517 284.512 24.6882 282.461 22.1816C280.41 19.6751 277.152 18.3307 272.686 18.1484L255.596 18.0801L250.4 47.9531ZM348.496 102.367C341.888 102.23 336.055 100.681 330.996 97.7188C325.983 94.7109 321.995 90.4043 319.033 84.7988C316.117 79.1478 314.43 72.6764 313.975 65.3848C313.473 57.9108 314.271 49.9355 316.367 41.459C318.464 32.9824 321.836 25.5312 326.484 19.1055C331.133 12.6797 336.579 7.87174 342.822 4.68164C349.111 1.49154 355.902 -0.0351562 363.193 0.101562C369.893 0.238281 375.749 1.83333 380.762 4.88672C385.775 7.89453 389.717 12.2467 392.588 17.9434C395.459 23.5944 397.1 30.0202 397.51 37.2207C397.965 45.2415 397.1 53.4902 394.912 61.9668C392.725 70.4434 389.329 77.7806 384.727 83.9785C380.124 90.1764 374.723 94.8249 368.525 97.9238C362.373 101.023 355.697 102.504 348.496 102.367ZM376.865 48.5L377.412 42.0059C377.868 33.8939 376.774 27.7415 374.131 23.5488C371.533 19.3561 367.568 17.1686 362.236 16.9863C353.896 16.7129 347.266 20.4043 342.344 28.0605C337.467 35.7168 334.71 46.4264 334.072 60.1895C333.617 68.2559 334.688 74.4766 337.285 78.8516C339.883 83.181 343.916 85.4368 349.385 85.6191C356.54 85.9382 362.464 83.1582 367.158 77.2793C371.852 71.3548 374.928 62.9922 376.387 52.1914L376.865 48.5Z" fill="black"/>
             <line y1="136" x2="394" y2="136" stroke="black" stroke-width="10"/>
@@ -19,17 +19,20 @@
             
 		<div class="search">
 			<svg viewBox="0 0 24 24"><path d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"/></svg>
-			<input type="search" autocomplete="false" placeholder='search "hostname"'>
-		</div>
+			<input type="search" autocomplete="false" placeholder="Chargement de l'interface ...">
+        </div>
+        
+        <div id="search" class="hidden" style="display: none;"></div>
 
         <div class="right">
-            <div class="network">
+            <div class="network" style="display: none;">
                 <svg class="load" viewBox="0 0 24 24"><path d="M12 6v3l4-4-4-4v3c-4.42 0-8 3.58-8 8 0 1.57.46 3.03 1.24 4.26L6.7 14.8c-.45-.83-.7-1.79-.7-2.8 0-3.31 2.69-6 6-6zm6.76 1.74L17.3 9.2c.44.84.7 1.79.7 2.8 0 3.31-2.69 6-6 6v-3l-4 4 4 4v-3c4.42 0 8-3.58 8-8 0-1.57-.46-3.03-1.24-4.26z"/></svg>
 				<h4>connecting...</h4>
 				<p>load</p>
 				<div class="progress-bar"><div style="width: 0%;"></div></div>
             </div>
 
+            <svg class="messages" onclick="messages.show()" viewBox="0 0 24 24"><path d="M21 6h-2v9H6v2c0 .55.45 1 1 1h11l4 4V7c0-.55-.45-1-1-1zm-4 6V3c0-.55-.45-1-1-1H3c-.55 0-1 .45-1 1v14l4-4h10c.55 0 1-.45 1-1z"/></svg>
             <svg class="more" viewBox="0 0 24 24"><path d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"/></svg>
             <img onclick="account.show()" src="blank.png" class="avatar">
         </div>
@@ -45,11 +48,6 @@
             <p>Accueil</p>
             <svg viewBox="0 0 24 24"><path d="M10 19v-5h4v5c0 .55.45 1 1 1h3c.55 0 1-.45 1-1v-7h1.7c.46 0 .68-.57.33-.87L12.67 3.6c-.38-.34-.96-.34-1.34 0l-8.36 7.53c-.34.3-.13.87.33.87H5v7c0 .55.45 1 1 1h3c.55 0 1-.45 1-1z"/></svg>
         </a>
-
-        <a class="messages">
-            <p>Messages</p>
-            <svg viewBox="0 0 24 24"><path d="M21 6h-2v9H6v2c0 .55.45 1 1 1h11l4 4V7c0-.55-.45-1-1-1zm-4 6V3c0-.55-.45-1-1-1H3c-.55 0-1 .45-1 1v14l4-4h10c.55 0 1-.45 1-1z"/></svg>
-		</a>
 		
 		<a class="drive" href="/drive">
             <p>Drive</p>
@@ -131,7 +129,7 @@
 
     <div id="hi">
         <h1><b>...</b> <span></span>!</h1>
-        <p>Qu'allez vous faire d'incroyable aujourd'hui avec Nitro ?</p>
+        <p>Nitro is loading, please wait few seconds.</p>
     </div>
 
     <div id="notif" class="hidden" onmousedown="return false;">
