--- a/public/update/index.html
+++ b/public/update/index.html
@@ -29,6 +29,11 @@
 			<svg viewBox="0 0 24 24"><path d="M9 16.2L4.8 12l-1.4 1.4L9 19 21 7l-1.4-1.4L9 16.2z"/></svg>
 			<h4>Vous êtes à jour !</h4>
 			<p>v<span></span></p>
+
+			<a href="/">
+				<svg viewBox="0 0 24 24"><path d="M21 11H6.83l3.58-3.59L9 6l-6 6 6 6 1.41-1.41L6.83 13H21z"/></svg>
+				<span>Retourner à l'accueil</span>
+			</a>
 		</div>
 
 		<div id="update" style="display: none;" class="hidden">
