--- a/public/login/index.html
+++ b/public/login/index.html
@@ -11,26 +11,19 @@
     <link rel="shortcut icon" href="/medias/favicon.svg" type="image/svg">
 </head>
 <body>
+    <div class="bg hidden"></div>
+
+    <div class="side-wrapper">
     <div id="side">
-        <svg class="logo" viewBox="0 0 120 225">
-            <path d="M74 0L0 124H74V0Z"/>
-            <path d="M46 225L120 101L46 101L46 225Z"/>
-        </svg>
 
         <a class="selected login">
-            <p>Connexion</p>
             <svg viewBox="0 0 24 24"><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 3c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 14.2c-2.5 0-4.71-1.28-6-3.22.03-1.99 4-3.08 6-3.08 1.99 0 5.97 1.09 6 3.08-1.29 1.94-3.5 3.22-6 3.22z"/></svg>
         </a>
 
         <a href="/signup" class="signup">
-            <p>Inscription</p>
             <svg viewBox="0 0 24 24"><path d="M15 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm-9-2V7H4v3H1v2h3v3h2v-3h3v-2H6zm9 4c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"/></svg>
 		</a>
-		
-		<a class="settings">
-            <p>Réglages</p>
-            <svg viewBox="0 0 24 24"><path d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"/></svg>
-        </a>
+    </div>
     </div>
 
     <div id="wrapper">
@@ -62,7 +55,6 @@
     <script src="../scripts/socket.js"></script>
     <script src="../scripts/prizm.js"></script>
     <script src="../scripts/connect.js"></script>
-    <script src="../scripts/ui.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
