--- a/public/drive/index.html
+++ b/public/drive/index.html
@@ -66,6 +66,10 @@
             <svg width="24" viewBox="0 0 24 24"><path d="M10 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V8c0-1.1-.9-2-2-2h-8l-2-2z"/></svg>
         </a>
 
+        <a class="feeds">
+            <svg width="24" viewBox="0 0 24 24"><circle cx="6.18" cy="17.82" r="2.18"/><path d="M5.59 10.23c-.84-.14-1.59.55-1.59 1.4 0 .71.53 1.28 1.23 1.4 2.92.51 5.22 2.82 5.74 5.74.12.7.69 1.23 1.4 1.23.85 0 1.54-.75 1.41-1.59-.68-4.2-3.99-7.51-8.19-8.18zm-.03-5.71C4.73 4.43 4 5.1 4 5.93c0 .73.55 1.33 1.27 1.4 6.01.6 10.79 5.38 11.39 11.39.07.73.67 1.28 1.4 1.28.84 0 1.5-.73 1.42-1.56-.73-7.34-6.57-13.19-13.92-13.92z"/></svg>
+        </a>
+
         <a class="fitness">
             <svg viewBox="0 0 24 24"><path d="M13.49 5.48c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm-3.6 13.9l1-4.4 2.1 2v6h2v-7.5l-2.1-2 .6-3c1.3 1.5 3.3 2.5 5.5 2.5v-2c-1.9 0-3.5-1-4.3-2.4l-1-1.6c-.4-.6-1-1-1.7-1-.3 0-.5.1-.8.1l-5.2 2.2v4.7h2v-3.4l1.8-.7-1.6 8.1-4.9-1-.4 2 7 1.4z"/></svg>
 		</a>
@@ -228,41 +232,6 @@
     </a>
 </div>
 
-    <!-- Messages
-    ================= -->
-
-    <div id="messages-bg" class="hidden" style="display: none;"></div>
-
-    <div id="messages" class="hidden" style="display: none;">
-        <div class="header">
-            <svg viewBox="0 0 24 24"><path d="M4 4h16v12H5.17L4 17.17V4m0-2c-1.1 0-1.99.9-1.99 2L2 22l4-4h14c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2H4zm2 10h12v2H6v-2zm0-3h12v2H6V9zm0-3h12v2H6V6z"/></svg>
-            <h4>Messages</h4>
-            <div class="list"></div>
-        </div>
-
-        <div class="dialog hidden">
-            <div class="top">
-                <svg onclick="messages.header()" viewBox="0 0 24 24"><path d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"/></svg>
-
-                <div class="user" status="loading">
-                    <img src="/blank.png">
-                    <h4>Chargement</h4>
-                    <p><svg viewbox="0 0 24 24"><circle cx="12" cy="12" r="12"/></svg><span>en cours ...</span></p>
-                </div>
-            </div>
-
-            <div class="messages"></div>
-			
-			<div class="send">
-				<div class="input">
-                    <svg class="icon" viewBox="0 0 24 24"><path d="M2.01 21L23 12 2.01 3 2 10l15 2-15 2z"/></svg>
-					<input type="text" placeholder="message à Noémie">
-                    <svg class="send" viewBox="0 0 24 24"><path d="M4 12l1.41 1.41L11 7.83V20h2V7.83l5.58 5.59L20 12l-8-8-8 8z"/></svg>
-                </div>
-			</div>
-        </div>
-    </div>
-
     <div id="viewer" class="hidden" style="display: none;">
         <div class="header">
             <svg class="back" onclick="viewer.hide()" viewBox="0 0 24 24"><path d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"/></svg>
@@ -274,13 +243,6 @@
         <video></video>
         <img class="view" alt="loading ...">
         <iframe class="view" frameBorder="0"></iframe>
-    </div>
-
-	<div id="notif" class="hidden" onmousedown="return false;">
-        <img>
-        <svg viewBox="0 0 24 24"><path></path></svg>
-        <h4></h4>
-        <p></p>
     </div>
 
     <!-- Scripts
