--- a/public/fitness/index.html
+++ b/public/fitness/index.html
@@ -4,28 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Mon suivi fitness - Nitro assistant</title>
+    <title>Mon suivi fitness - Jonas assistant</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="../fonts.css">
     <link rel="stylesheet" href="../nav.css">
     <link rel="stylesheet" href="../scripts/tooltips.css">
     <link rel="shortcut icon" href="../medias/favicon.svg" type="image/svg">
+    <link rel="stylesheet" href="/scripts/plyr.css" />
 </head>
 <body>
 
     <!-- Navigation
     ================= -->
     <div id="nav" class="loading" style="display: none;">        
-        <svg class="icon" viewBox="0 0 120 225">
-            <path class="path1 filled" d="M74 0L0 124H74V0Z"/>
-            <path class="path2 filled" d="M46 225L120 101L46 101L46 225Z"/>
+        <svg class="icon" viewBox="0 0 170.3 357">
+            <defs><style>
+                    .a {
+                      fill: #f57c15;
+                    }
+              
+                    .b {
+                      fill: none;
+                      stroke: #f57c15;
+                      stroke-linecap: round;
+                      stroke-linejoin: round;
+                      stroke-width: 30px;
+                    }
+                </style></defs>
+                <circle class="a" cx="91.3" cy="88" r="19"/>
+                <polyline class="b" points="38.3 25 22.3 73 53.3 124 62.3 209 102.3 213 135.3 122 155.3 72 126.3 15"/>
+                <polygon class="a" points="50.3 119 133.3 119 104.3 218 67.3 216.11 50.3 119"/>
+                <line class="b" x1="103.17" y1="208.71" x2="103.3" y2="342"/>
+                <polyline class="b" points="63 208.83 15 266.83 55.3 320"/>
         </svg>
 
-        <svg class="logo" viewBox="0 0 822 141">
-            <path d="M80.1172 101H60.7031L33.0176 34.623L21.4648 101H1.43555L18.7305 1.46875H38.0762L65.8301 67.9824L77.3828 1.46875H97.3438L80.1172 101ZM119.424 101H99.3945L116.621 1.46875H136.65L119.424 101ZM223.535 18.0801H194.004L179.648 101H159.619L173.975 18.0801H144.785L147.725 1.46875H226.475L223.535 18.0801ZM263.799 64.5645H247.529L241.172 101H221.143L238.438 1.46875L271.387 1.53711C282.415 1.53711 290.892 4.13477 296.816 9.33008C302.786 14.5254 305.43 21.7487 304.746 31C303.789 44.6719 296.497 54.1738 282.871 59.5059L296.885 99.9062V101H275.557L263.799 64.5645ZM250.4 47.9531L265.303 48.0898C270.589 47.9987 274.941 46.5859 278.359 43.8516C281.823 41.0716 283.896 37.3118 284.58 32.5723C285.218 28.1517 284.512 24.6882 282.461 22.1816C280.41 19.6751 277.152 18.3307 272.686 18.1484L255.596 18.0801L250.4 47.9531ZM348.496 102.367C341.888 102.23 336.055 100.681 330.996 97.7188C325.983 94.7109 321.995 90.4043 319.033 84.7988C316.117 79.1478 314.43 72.6764 313.975 65.3848C313.473 57.9108 314.271 49.9355 316.367 41.459C318.464 32.9824 321.836 25.5312 326.484 19.1055C331.133 12.6797 336.579 7.87174 342.822 4.68164C349.111 1.49154 355.902 -0.0351562 363.193 0.101562C369.893 0.238281 375.749 1.83333 380.762 4.88672C385.775 7.89453 389.717 12.2467 392.588 17.9434C395.459 23.5944 397.1 30.0202 397.51 37.2207C397.965 45.2415 397.1 53.4902 394.912 61.9668C392.725 70.4434 389.329 77.7806 384.727 83.9785C380.124 90.1764 374.723 94.8249 368.525 97.9238C362.373 101.023 355.697 102.504 348.496 102.367ZM376.865 48.5L377.412 42.0059C377.868 33.8939 376.774 27.7415 374.131 23.5488C371.533 19.3561 367.568 17.1686 362.236 16.9863C353.896 16.7129 347.266 20.4043 342.344 28.0605C337.467 35.7168 334.71 46.4264 334.072 60.1895C333.617 68.2559 334.688 74.4766 337.285 78.8516C339.883 83.181 343.916 85.4368 349.385 85.6191C356.54 85.9382 362.464 83.1582 367.158 77.2793C371.852 71.3548 374.928 62.9922 376.387 52.1914L376.865 48.5Z" fill="black"/>
-            <path opacity="0.6" d="M445.033 101L462.328 1.46875L488.168 1.53711C496.28 1.53711 503.253 3.5651 509.086 7.62109C514.965 11.6771 519.18 17.2826 521.732 24.4375C524.285 31.5469 525.036 39.5221 523.988 48.3633L523.305 53.3535C521.299 67.8457 515.671 79.4212 506.42 88.0801C497.169 96.6934 485.548 101 471.557 101H445.033ZM473.266 12.2695L459.73 90.2676L472.377 90.3359C482.038 90.3359 490.219 87.3281 496.918 81.3125C503.663 75.2969 508.038 67.0482 510.043 56.5664C511.638 48.181 512.185 41.0488 511.684 35.1699C511 28.1061 508.653 22.5918 504.643 18.627C500.632 14.6165 495.255 12.5202 488.51 12.3379L473.266 12.2695ZM577.65 60.7363H554.682L547.709 101H534.789L552.084 1.46875L582.025 1.53711C592.462 1.58268 600.414 4.22591 605.883 9.4668C611.352 14.7077 613.653 21.8398 612.787 30.8633C612.286 37.1068 610.007 42.5983 605.951 47.3379C601.941 52.0775 596.586 55.6549 589.887 58.0703L605.336 100.111L605.268 101H591.596L577.65 60.7363ZM556.527 50.0039L575.395 50.0723C581.957 50.0723 587.494 48.3405 592.006 44.877C596.518 41.3678 599.161 36.6966 599.936 30.8633C600.619 25.1667 599.48 20.7005 596.518 17.4648C593.555 14.2292 589.044 12.5202 582.982 12.3379L563.09 12.2695L556.527 50.0039ZM632.953 101H620.17L637.465 1.46875H650.248L632.953 101ZM692.016 83.4316L732.416 1.46875H746.908L695.502 101H684.154L663.988 1.46875H677.455L692.016 83.4316ZM806.586 54.9941H764.75L758.598 90.2676H807.27L805.355 101H743.9L761.195 1.46875H821.967L820.053 12.2695H772.133L766.596 44.2617H808.432L806.586 54.9941Z" fill="black"/>
-            <line y1="136" x2="394" y2="136" stroke="black" stroke-width="10"/>
-        </svg>
+        <img src="/medias/logos/fitness-type.svg" class="logo">
 
 		<div class="search">
 			<svg viewBox="0 0 24 24"><path d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"/></svg>
@@ -48,6 +61,8 @@
             <img onclick="account.show()" src="/blank.png" class="avatar">
         </div>
     </div>
+
+<div ajax-end id="ajax">
 
     <div id="heart" style="display: none;" class="hidden">
         <div class="hidden">
@@ -201,14 +216,19 @@
         </div>
     </div>
 
+</div ajax-end>
+
     <!-- Scripts
     ================= -->
 
-	<script src="../scripts/socket.js"></script>
-	<script src="../scripts/fancy.js"></script>
-	<script src="../scripts/prizm.js"></script>
-    <script src="../scripts/connect.js"></script>
-	<script src="../scripts/ui.js"></script>
+    <script src="/scripts/charts.js"></script>
+	<script src="/scripts/socket.js"></script>
+	<script src="/scripts/fancy.js"></script>
+	<script src="/scripts/prizm.js"></script>
+    <script src="/scripts/connect.js"></script>
+    <script src="/scripts/plyr.js"></script>
+    <script src="/scripts/ui.js"></script>
+    <script src="/scripts/ajax.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
